# yoto_bridge

./: .env.example  .gitignore  README.md  docker-compose.build.yml  docker-compose.yml
.github/workflows/: build-images.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  csrf.py  database.py  main.py  models.py  scheduler.py  schemas.py  secrets.py  security.py
backend/app/providers/: base.py  factory.py  subsonic.py
backend/app/routers/: auth.py  cards.py  library.py  settings.py  stats.py  stream.py  sync.py  yoto.py
backend/app/services/: library.py  playback.py  publish.py
backend/app/yoto/: client.py  oauth.py
backend/tests/: conftest.py  fakes.py  test_api.py  test_database.py  test_library.py  test_playback.py  test_publish.py  test_security.py  test_subsonic.py  test_yoto_oauth.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ContentPicker.tsx  Layout.tsx
frontend/src/pages/: CardEditPage.tsx  CardsPage.tsx  DashboardPage.tsx  LibraryPage.tsx  SettingsPage.tsx
